# island-hopper-sdk

./: LICENSE  MIGRATION_CHEAT_SHEET.md  README.md  SCALEWAY_TRANSLATION_REFERENCE.md  STRANDS_INTEGRATION_GUIDE.md  pyproject.toml
docs/: RAG_KNOWLEDGE_BASE.md  RAG_KNOWLEDGE_BASE_PART2.md  RAG_KNOWLEDGE_BASE_PART3.md  README.md
examples/: basic_agent.py
src/strands/: __init__.py
src/strands/a2a/: __init__.py  scaleway.py
src/strands/hooks/: __init__.py  scaleway.py
src/strands/models/: __init__.py  scaleway.py
src/strands/session/: __init__.py  scaleway.py
src/strands/telemetry/: __init__.py  scaleway.py
tests/: test_scaleway_model.py  test_scaleway_session.py
